--- a/web/index.html
+++ b/web/index.html
@@ -60,21 +60,21 @@ HLT</textarea>
           </object>
         </div>
       </div>
-      <div class="flex-container" style="min-height: 16em;height:100%;width:99%;">
-          <div class="flex-container-v" style="height: 90%;flex: 1">
+      <div class="flex-container" style="min-height: 16em;height:100%;width:99%;align-items: center;justify-content: center;">
+          <div class="flex-container-v" style="height: 90%;flex: 1;max-width: 16em;">
             <div>OUTPUT</div>
             <div id="output_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
           </div>
 
-          <div class="flex-container-v" style="height: 90%;flex: 4">
+          <div class="flex-container-v" style="height: 90%;flex: 4;max-width: 28em;">
             <div>MEMORY</div>
-            <div id="memorydump_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
+            <div id="memorydump_text" style="overflow: auto;border: 2px solid gray;height: 100%;" readonly="readonly"></div>
             <div class="flex-container" style="justify-content: center">
               <label for="mem_add">Address:</label><input type="text" id="mem_add" value="0x00000000"><input type="button" id="btn_show_mem" value="Show" style="margin-left: 8px" disabled="disabled">
             </div>
           </div>
 
-          <div class="flex-container-v" style="height: 90%;flex: 6">
+          <div class="flex-container-v" style="height: 90%;flex: 6;max-width: 42em">
             <div>LOG</div>
             <div id="log_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
           </div>
