--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   <body style="max-width: 100vw;">
     <div class="flex-container-v" style="height: 100%;width: 100%;align-items: center">
       <h1 style="text-align: center">WebAssembly Mima Simulator</h1>
-      <p style="text-align: center"><a href="https://github.com/bnlrnz/MimaSim" target="_blank">https://github.com/bnlrnz/MimaSim</a></p>
+      <p style="text-align: center"><a href="https://github.com/bnlrnz/MimaSim#mima-assembler-instructions" target="_blank">https://github.com/bnlrnz/MimaSim</a></p>
       <div class="flex-container">
         <div class="flex-container-v">
           <div class="flex-container-v">
