dont care about minification for now

--- a/web/index.html
+++ b/web/index.html
@@ -95,7 +95,7 @@ HLT</textarea>
     loadScripts();
     function loadScripts(){
     var scripts = [];
-    var _scripts = ['MimaSim.js', 'MimaSimGUI.min.js']
+    var _scripts = ['MimaSim.js', 'MimaSimGUI.js']
     loadScriptsSync(_scripts, scripts);
     }
     function loadScriptsSync(_scripts, scripts){
